[package]
name = "game"
version = "0.1.0"
authors = ["Marvin Sextro <marvin.sextro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "3bc5e4cb1edb623a35d3dbb4f1918411f133a644" }
