[package]
name = "game"
version = "0.0.1"
authors = ["Marvin Sextro <marvin.sextro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
heron = { git = "https://github.com/jcornaz/heron", branch = "dependabot/cargo/bevy-tw-0.5.0", default-features = false, features = ["2d"] }
